clox/test/testData/compiler/compilationError/var-in-if.lox
if (monday) var croissant = "yes";
